--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="calculator">
+    <p>calculator</p>
     <input type="text" id="display" disabled />
     <div class="buttons">
       <button onclick="clearDisplay()">C</button>
