--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="calculator">
     <p>calculator</p>
+    <p>hello</p>
     <input type="text" id="display" disabled />
     <div class="buttons">
       <button onclick="clearDisplay()">C</button>
